argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    #cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: "nginx"
  rules:
  - host: argocd.das.quest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-release-argo-cd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.das.quest
    secretName: argocd-secret # do not change, this is provided by Argo CD
