hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.das.quest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
#             name: http 
              number: 8080
  tls:
  - hosts:
    - hello-world.das.quest
    secretName: hello-secret
