keycloak-ingess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.das.quest
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port: 
              name: http  
  tls:
  - hosts:
    - keycloak.das.quest
    secretName: keycloak-secret
